--- a/amphp/composer.json
+++ b/amphp/composer.json
@@ -7,6 +7,7 @@
         }
     ],
     "require": {
-        "amphp/amp": "^2.0"
+        "amphp/amp": "^2.0",
+        "amphp/artax": "^3.0"
     }
 }
